tests/snapshots/integration__validate__flag_with_value.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog test1 -a=3

# OUTPUT
command cat >&2 <<-'EOF' 
error: flag `-a` don't accept any value
EOF
exit 1

# BUILD_OUTPUT
error: flag `-a` don't accept any value
