tests/snapshots/integration__validate__help_notations.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog -h

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog [OPTIONS]

OPTIONS:
       -target <NAME>                          <arch><sub>-<os>-<abi> see the targets command
  -n <NUM>                                     <num> volumes for input, '0' to prompt interactively
      --merge <PATH1> <PATH2> <BASE> <RESULT>  Perform a three-way merge by providing paths for two modified versions of a file, the common origin of both modified versions and the output file to save merge results.
  -h,  -help                                   Print help
  -V,  -version                                Print version

EOF
exit 0

# RUN_OUTPUT
USAGE: prog [OPTIONS]

OPTIONS:
       -target <NAME>                          <arch><sub>-<os>-<abi> see the targets command
  -n <NUM>                                     <num> volumes for input, '0' to prompt interactively
      --merge <PATH1> <PATH2> <BASE> <RESULT>  Perform a three-way merge by providing paths for two modified versions of a file, the common origin of both modified versions and the output file to save merge results.
  -h,  -help                                   Print help
  -V,  -version                                Print version
