tests/snapshots/integration__validate__help_version_exist.snap
---
source: tests/validate.rs
expression: data
---
************ RUN ************
prog -h

OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog [OPTIONS]

OPTIONS:
  -h, --help
  -V, --version

EOF
exit 0


