tests/snapshots/integration__validate__option_choice_fn.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog test1 --cc val

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `val` for `<CC>`
  [possible values: abc, def, ghi]
EOF
exit 1

# BUILD_OUTPUT
error: invalid value `val` for `<CC>`
  [possible values: abc, def, ghi]
