tests/snapshots/integration__validate__option_not_multiple.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog test1 -e -e

# OUTPUT
command cat >&2 <<-'EOF' 
error: incorrect number of values for `-e <E>`
EOF
exit 1

# BUILD_OUTPUT
error: incorrect number of values for `-e <E>`
